# FakeNewsDetection

./: .gitignore  DockerFile  credentials.txt  docker-compose.yml  pyproject.toml  readME.md  setup.py
models/: model.pkl
notebook/: notebook_data_viz.ipynb
src/: main.py  news_api.py  predict.py  s3.py  train_model.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_api.py  test_predict.py  test_s3.py  test_train.py
