[tool.poetry]
name = "fakenewsdetection"
version = "0.1.0"
description = ""
authors = ["Mael Nedellec"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
numpy = "^1.26.4"
joblib = "^1.4.2"
tqdm = "^4.66.4"
nltk = "^3.8.1"
wordcloud = "^1.9.3"
ipykernel = "^6.29.4"
seaborn = "^0.13.2"
python-dateutil = "^2.9.0.post0"
jupyter = "^1.0.0"
cython = "^3.0.10"
numba = "^0.59.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
